src/compiletest/tlcell-10.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
 --> $DIR/tlcell-10.rs:8:5
  |
7 |     fn is_send<T: Send>() {}
  |                   ---- required by this bound in `is_send`
8 |     is_send::<TLCellOwner<Marker>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `TLCellOwner<Marker>`, the trait `Send` is not implemented for `*const ()`
  = note: required because it appears within the type `qcell::tlcell::NotSendOrSync`
  = note: required because it appears within the type `PhantomData<qcell::tlcell::NotSendOrSync>`
  = note: required because it appears within the type `TLCellOwner<Marker>`
